# OwOstick

./: docker-compose.yml  owo.code-workspace
OwOstick-android/: settings.gradle
OwOstick-android/app/: build.gradle
OwOstick-android/app/src/androidTest/java/tech/astrid/owostick/android/: ExampleInstrumentedTest.kt
OwOstick-android/app/src/main/: AndroidManifest.xml
OwOstick-android/app/src/main/java/tech/astrid/owostick/android/: BluetoothDevice.kt  Constants.kt  Device.kt  DeviceAdapter.kt  DeviceConnectionFragment.kt  MainActivity.kt  ServerConnection.kt  ServerConnectionFragment.kt
OwOstick-android/app/src/main/res/layout/: activity_main.xml  device_list_item.xml  fragment_device_connection.xml  fragment_server_connection.xml  sample_big_slider.xml
OwOstick-android/app/src/main/res/values/: attrs_big_slider.xml  strings.xml  styles.xml  themes.xml
OwOstick-android/app/src/main/res/values-night/: styles.xml  themes.xml
OwOstick-android/app/src/test/java/tech/astrid/owostick/android/: ExampleUnitTest.kt
OwOstick-android/gradle/wrapper/: gradle-wrapper.properties
OwOstick-arduino/include/: hc05.hpp
OwOstick-arduino/src/: main.cpp
OwOstick-frontend/: .eslintcache  Dockerfile  package.json
OwOstick-frontend/src/: APIProvider.tsx  App.tsx  ConnectionForm.tsx  PowerSlider.tsx
OwOstick-frontend/src/api/: OwOServer.ts
OwOstick-server/: Cargo.toml  Dockerfile  Pipfile  handler.py  main.py  requirements.txt
OwOstick-server/src/: main.rs
include/: pins.hpp
src/: hc05.cpp  main.cpp
(+1 files in other folders)
