[package]
name = "OwOstick-server"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
serde = "1.0.118"
serde_json = "1.0.61"
tokio = "1.0.1"
uuid = "0.8.1"
warp = "0.2.5"
